--- a/home.html
+++ b/home.html
@@ -171,7 +171,7 @@
 
     <footer class="bg-dark text-light text-center py-3">
         <small>
-            <span>©2021 Ok Drugs LLC. All Rights Reserved.</span> •
+            <span>©2021 Bootstrap LLC. All Rights Reserved.</span> •
             <a href="#" class="text-light">RETURN POLICY</a> •
             <a href="#" class="text-light">TERMS & LEGAL</a> •
             <a href="#" class="text-light">PRIVACY NOTICE</a>
