--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                         <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="btn btn-primary ms-2" href="#">Subscribe</a></li>
+                        <li class="nav-item"><a class="btn btn-primary ms-2" href="#join-community">Subscribe</a></li>
                     </ul>
                 </div>
             </div>
@@ -74,7 +74,7 @@
     </div>
     
 
-    <section class="container mb-5">
+    <section class="container mb-5" id="join-community">
         <div class="text-center mb-4">
             <h2>Stay in the Loop</h2>
         </div>
