--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         <li class="nav-item"><a class="btn btn-primary ms-2" href="#join-community">Subscribe</a></li>
@@ -96,7 +96,7 @@
 
     <footer class="bg-dark text-light text-center py-3">
         <small>
-            <span>©2021 Ok Drugs LLC. All Rights Reserved.</span> •
+            <span>©2021 Bootstrap LLC. All Rights Reserved.</span> •
             <a href="#" class="text-light">RETURN POLICY</a> •
             <a href="#" class="text-light">TERMS & LEGAL</a> •
             <a href="#" class="text-light">PRIVACY NOTICE</a>
